<resources>
    <string name="app_name">UniSupport</string>
    <string name="go_to_app">Go to App</string>
    <string name="qoute">تتكىء الشجرة على الشجرة والانسان على اخيه</string>
    <string name="sub_qoute">(وتعاونو على البر والتقوى)</string>
    <string name="user_type">User type</string>
    <string name="student">Student</string>
    <string name="student_or_graduated">Student or graduated</string>
    <string name="psychologist">Psychologist</string>
    <string name="employee">Employee</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_student_id">Student ID</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="sign_up">Sign up</string>
    <string name="hint_password">Password</string>
    <string name="upload_certificate">Upload certificate</string>
    <string name="hint_job_career">Job Career</string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="already_have_an_account">Already have and account ?</string>
    <string name="login">Login</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Verification code</string>
    <string name="code">Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reactions">Reactions</string>
    <string name="references">references</string>
    <string name="tools">Tools</string>
    <string name="useful">useful</string>
    <string name="un_useful">unuseful</string>
    <string name="good">good</string>
    <string name="necessary">necessary</string>
    <string name="brilliant">brilliant</string>
    <string name="discuss_new_topic">Discuss new topic</string>
    <string name="search">Search</string>
    <string name="community">Community</string>
    <string name="messages">messages</string>
    <string name="administrative_consultation">Administrative consultation</string>
    <string name="psychologist_consultation">Psychologist consultation</string>
    <string name="details">Details</string>
    <string name="type_details_of_your_query">Type details of your query</string>
    <string name="send">Send</string>
    <string name="answer">Answer</string>
    <string name="reply">Reply</string>
    <string name="title">Title</string>
    <string name="specialization">Specialization</string>
    <string name="description">Description</string>
    <string name="suggest_tool">Suggest tool</string>
    <string name="tool_name">Tool name</string>
    <string name="tool_link">Tool link</string>
    <string name="link">Link</string>
    <string name="upload_reference">Upload reference</string>
    <string name="publish">Publish</string>
    <string name="posts">Posts</string>
    <string name="pages">Pages</string>
    <string name="hint_description">Write description of your query</string>
    <string name="missing_fields_message">All Fields Are required</string>
    <string name="upload_your_image">Choose profile image</string>

    <string name="students_email">^[\w]+[\w.%+-]*@std\.su\.edu\.sa$</string>
    <string name="employee_prefix">^[\w]+[\w.%+-]*@su\.edu\.sa$</string>
    <string name="hint_password_retype">confirm password</string>
    <string name="update_profile">Update profile</string>
    <string name="hint_bio">Bio</string>
    <string name="place_holder">Message</string>
    <string name="evalute_this_reply">Evaluate this reply</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="evalute">Evaluate</string>
    <string name="Message">Message</string>
    <string name="save">Save</string>
    <string name="upload_tool">Add tool</string>
    <string name="consultation">Consultation</string>
    <string name="logout">Logout</string>
    <string name="public_chat">Public Chat</string>
    <string name="content">Content</string>
    <string name="lights">Lights</string>
    <string name="update_profile_image">Update profile image</string>
</resources>