<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_post"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/details"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginVertical="16dp"/>

    <EditText
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@android:color/white"
        android:layout_marginBottom="16dp"
        android:inputType="textMultiLine"
        android:hint="@string/type_details_of_your_query"
        android:minLines="8" />

    <Button
        android:id="@+id/send"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:text="@string/send"
        android:background="@drawable/bg_button_checked"/>

</LinearLayout>