<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/reactions_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:weightSum="5"
        android:background="@drawable/bg_post"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/un_useful"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:button="@null"
            android:background="@drawable/reaction_button_state_bg"
            android:text="@string/un_useful"
            android:textSize="13sp"
            android:paddingVertical="10dp"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/useful"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/reaction_button_state_bg"
            android:text="@string/useful"
            android:textSize="13sp"
            android:paddingVertical="10dp"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/good"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:layout_margin="4dp"
            android:paddingVertical="10dp"
            android:background="@drawable/reaction_button_state_bg"
            android:checked="true"
            android:text="@string/good"
            android:textSize="13sp"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/necessary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/reaction_button_state_bg"                android:text="@string/necessary"
            android:textSize="13sp"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/brilliant"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingVertical="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:layout_margin="4dp"
            android:background="@drawable/reaction_button_state_bg"                android:text="@string/brilliant"
            android:textSize="13sp"
            android:textAllCaps="false"/>


    </LinearLayout>


</LinearLayout>