<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_bg"
    tools:context=".WelcomeActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:letterSpacing="0.1"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/lora_regular"
            android:drawableEnd="@drawable/ic_book"
            android:drawableTint="@color/blue_dark"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:drawablePadding="20dp"/>

        <Button
            android:id="@+id/go_to_app_btn"
            android:layout_below="@id/title"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/go_to_app"
            android:textColor="@android:color/white"
            android:background="@color/blue_dark"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/qoute"
            android:layout_below="@id/go_to_app_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/blue_dark"
            android:text="@string/qoute"/>

        <TextView
            android:id="@+id/sub_qoute"
            android:layout_below="@id/qoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:textColor="#D5242900"
            android:layout_marginBottom="10dp"
            android:text="@string/sub_qoute"/>

    </RelativeLayout>







</RelativeLayout>