<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/postLayout"
        android:background="@drawable/bg_post"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_person"
                android:layout_marginStart="16dp"
                app:civ_circle_background_color="@android:color/darker_gray"
                android:layout_marginEnd="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="4dp"
                    android:textSize="18sp"
                    android:text="Abdullah Almutairi"
                    android:textColor="@android:color/black" />
                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:alpha="0.6"
                    android:text="2 days ago"
                    android:textColor="@android:color/black" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/middle_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:alpha="0.9"
                android:text="Design platform for academic society\n\nDesign platform for academic society\nDesign platform for academic society\nDesign platform for academic society\nDesign platform for academic society"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:weightSum="3">
                <TextView
                    android:id="@+id/tools"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:layout_weight="1"
                    android:text="@string/tools"
                    android:gravity="center"
                    android:textColor="@color/blue_light"/>

                <TextView
                    android:id="@+id/references"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:layout_weight="1"
                    android:text="@string/references"
                    android:gravity="center"
                    android:textColor="@color/blue_light"/>

                <TextView
                    android:id="@+id/reactions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:layout_weight="1"
                    android:text="@string/reactions"
                    android:gravity="center"
                    android:textColor="@color/blue_light"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <RadioGroup
        android:id="@+id/reactions_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/postLayout"
        android:padding="4dp"
        android:weightSum="5"
        android:background="@drawable/bg_post"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/un_useful"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:button="@null"
            android:background="@drawable/reaction_button_state_bg"
            android:text="@string/un_useful"
            android:textSize="13sp"
            android:paddingVertical="10dp"
            android:textAllCaps="false"/>

        <RadioButton
            android:id="@+id/useful"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/reaction_button_state_bg"
            android:text="@string/useful"
            android:textSize="13sp"
            android:paddingVertical="10dp"
            android:textAllCaps="false"/>

        <RadioButton
            android:id="@+id/good"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:layout_margin="4dp"
            android:paddingVertical="10dp"
            android:background="@drawable/reaction_button_state_bg"
            android:checked="true"
            android:text="@string/good"
            android:textSize="13sp"
            android:textAllCaps="false"/>

        <RadioButton
            android:id="@+id/necessary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/reaction_button_state_bg"                android:text="@string/necessary"
            android:textSize="13sp"
            android:textAllCaps="false"/>

        <RadioButton
            android:id="@+id/brilliant"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingVertical="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:layout_margin="4dp"
            android:background="@drawable/reaction_button_state_bg"                android:text="@string/brilliant"
            android:textSize="13sp"
            android:textAllCaps="false"/>


    </RadioGroup>



</RelativeLayout>