<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyAccountActivity"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textSize="40dp"
            android:fontFamily="@font/lora_regular"
            android:drawableEnd="@drawable/ic_book"
            android:layout_marginBottom="80dp"
            android:drawablePadding="30dp"/>

        <LinearLayout
            android:layout_below="@id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_code"
                    android:textSize="22sp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="40dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/code"
                        android:inputType="textEmailAddress"
                        android:textSize="16sp"
                        android:paddingBottom="12dp"
                        android:layout_marginStart="16dp"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>



            <Button
                android:id="@+id/verify_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/verify"
                android:background="@color/blue_light"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>



    </RelativeLayout>

</androidx.core.widget.NestedScrollView>


