<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".employee.AddReplyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultation"
        android:textSize="16sp"
        android:paddingHorizontal="12dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/consultation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reply"
        android:textSize="16sp"
        android:paddingHorizontal="12dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="16dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minLines="8"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingBottom="12dp"
            android:layout_marginStart="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_marginHorizontal="8dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/save"
        android:background="@color/blue_light"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"/>


</LinearLayout>