<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".student.PsychologistReplyViewActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="16sp"
        android:paddingHorizontal="12dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="16dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minLines="8"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingBottom="12dp"
            android:layout_marginStart="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/evaluate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/evalute"
            android:background="@color/blue_light"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/Message"
            android:background="@color/blue_light"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>


</LinearLayout>